gl31-master/src/test/deca/context/invalid/complet/no_herit.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 17: Erreur, la classe A n'a pas accès à methB
//
// Historique:
//    cree le 20/01/2021
class A{}
class B extends A{
    int methB(){
        return 2;
    }
}
{
    A a;
    int i = a.methB();
}
